fix the login page layout issue while in different locale.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -216,6 +216,9 @@ body {
 .form-signin a{
 	color: #ffffff;
 }
+.form-signin label{
+	width:70px;
+}
 .form-signin #register-link{
 	margin-left: 80px;
 }
